--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "start-server": "json-server --watch db.json --port 3002"
-
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.1"
   }
 }
